jira/jira-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jira
spec:
  ports:
  - name: jira-port
    port: 3080
    targetPort: 8080
  selector:
    app: jira
