jira/jira-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jira-ing
spec:
  rules:
  - host: jira.paasdev.k2software.cn
    http:
      paths:
      - path: /
        backend:
          serviceName: jira
          servicePort: jira-port
